--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
-        <version>4.8.lucene800.0</version>
+        <version>4.9.lucene800.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
