--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -134,14 +134,6 @@
             </plugin>
 
             <!-- Downloads and unzips test product data for integration-tests -->
-            <!--
-                This is temporarily disabled until the file below is recompressed
-                and re-uploaded. It's currently uncompressed and treated as corrupt
-                by this plugin.
-
-                Download manually and place the json in ${project.build.directory}/integration-test-data
-            -->
-            <!--
             <plugin>
                 <groupId>com.googlecode.maven-download-plugin</groupId>
                 <artifactId>download-maven-plugin</artifactId>
@@ -154,14 +146,13 @@
                             <goal>wget</goal>
                         </goals>
                         <configuration>
-                            <url>https://querqy.org/datasets/icecat/icecat-products-w_price-19k-20201127.tar.gz</url>
+                            <url>https://space.thiswayup.de/icecat-products-w_price-19k-20201127.tgz </url>
                             <unpack>true</unpack>
                             <outputDirectory>${project.build.directory}/integration-test-data</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-            -->
 
             <!-- Execute Docker integration tests -->
             <plugin>
