--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,14 +14,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Cache maven deps
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: maven-${{ hashFiles('**/pom.xml') }}
+
     - name: Select JDK
       uses: actions/setup-java@v1
       with:
         java-version: ${{ matrix.jdk }}
+    
+    # Run all the way to the install goal to have artifacts
+    # in the local maven repo. we need them for later dependency
+    # analysis
+    - name: Build
+      run: mvn install --file pom.xml
     - name: Dependecy Analysis
       run: mvn dependency:tree --file pom.xml -Dverbose
-    - name: Build
-      run: mvn package --file pom.xml
+
+    # Run integration tests in one jdk only
     - name: Integration Tests
       if: matrix.jdk == '1.8'
       run: mvn verify -DskipITs=false --file pom.xml
