--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     # in the local maven repo. we need them for later dependency
     # analysis
     - name: Build
-      run: mvn install --file pom.xml -Djava.version=${{ matrix.jdk }}
+      run: mvn install --file pom.xml
     - name: Dependecy Analysis
       run: mvn dependency:tree --file pom.xml -Dverbose
 
