--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -222,7 +222,7 @@
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>${maven-javadoc-plugin.version}</version>
                         <configuration>
-                            <source>8</source>
+                            <source>${java.version}</source>
                         </configuration>
                         <executions>
                             <execution>
